fix: adicionando gap ao css do histórico

--- a/flask_app/static/css/index.css
+++ b/flask_app/static/css/index.css
@@ -331,6 +331,7 @@ aside {
     flex-direction: column;
     flex-grow: 1;
     overflow: auto;
+    gap: 10px;
 }
 
 .history_item {
